--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bignumber.js": "^9.1.1",
     "chart.js": "^4.2.0",
     "ethers-react": "^1.1.0",
+    "fs": "^0.0.1-security",
     "moralis": "^2.14.1",
     "moralis-v1": "^1.12.0",
     "net": "^1.0.2",
@@ -26,6 +27,9 @@
     "web3uikit": "^1.0.4"
   },
   "devDependencies": {
-    "prettier": "^2.8.3"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.6"
   }
 }
