--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "yarn run build && next export -i _static"
   },
   "dependencies": {
     "@ethersproject/constants": "^5.7.0",
